--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href='{{ asset('assets/css/bootstrap.min.css') }}' rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('assets/css/ecommerce.css') }}">
 
     <style>
         .bd-placeholder-img {
@@ -35,21 +36,31 @@
 
     
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark ">
-        <a class="navbar-brand" href="#">Carousel</a>
+        <a class="navbar-brand" href=" {{path('home')}} ">Ecommerce website</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Nos Produits</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Que sommes-nous?</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
                 
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="rechercher" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
-            </form>
+            <div class="navbar-item-custom">
+                {% if app.user %}
+                    <a href=" {{ path('account') }} ">Mon Compte<small> ({{ app.user.firstname }})</small> </a> | <a href=" {{ path('app_logout') }} ">Déconnexion</a>
+                {% else %}
+                    <a href=" {{ path('app_login') }} ">Connexion</a> | <a href=" {{ path('register') }} ">Inscription</a>
+                {% endif %}
+            </div>
+
         </div>
     </nav>
 </header>
@@ -105,13 +116,13 @@
         </a>
     </div>
     {% endif %}
-
+    <div class="container mt-4">
     {% block content %}  {% endblock %}
-
+    </div>
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="footer-custom">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017-2020 Ecommerce website, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
