--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -13,7 +13,7 @@
              <span style="font-weight:bold"; > {{( product.price / 100) |number_format(2, ',' ) }} $</span>
              <hr>
             <p> {{ product.description }} </p>
-            <a href="  " class="btn btn-primary" >Ajouter au panier</a>
+            <a  class="btn btn-primary" href=' {{path('add_to_cart', {'id': product.id } )}} ' >Ajouter au panier</a>
         </div>
     </div>
 {% endblock %}
